--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-optimized-image": "^0.4.1",
     "react-router-dom": "^6.4.0",
     "swiper": "^8.4.2"
   },
